2011-02-23	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/net/if_pppvar.h: Add "extern C++" guards.
	Add header guard.
	* libnetworking/sys/signalvar.h: Comment out unused code.

2011-02-23	Ralf Corsépius <ralf.corsepius@rtems.org>

	* posix/include/rtems/posix/mqueue.h: Relocate "extern C++" guards.
	* posix/include/rtems/posix/key.h: Add missing includes.
	* libnetworking/machine/in_cksum.h: Add missing includes.
	* libcsupport/include/clockdrv.h, libcsupport/include/console.h,
	libcsupport/include/spurious.h, libcsupport/include/rtems/error.h,
	libcsupport/include/rtems/libcsupport.h: Add missing includes.

2011-02-23	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/vm/vm_kern.h: Comment out unused vars.

2011-02-23	Ralf Corsépius <ralf.corsepius@rtems.org>

	* posix/include/mqueue.h: Relocate "extern C++" guards.
	* sapi/include/rtems/fatal.h: Add missing includes.
	* score/include/rtems/score/tod.h: Add missing includes.
	* ftpd/ftpd.h: Add missing includes.
	* libmisc/devnull/devnull.h, libmisc/stackchk/stackchk.h:
	Fix header guard. Add missing includes.
	* score/include/rtems/debug.h, score/include/rtems/score/sysstate.h,
	score/include/rtems/score/timespec.h, 
	score/inline/rtems/score/address.inl, 
	score/inline/rtems/score/stack.inl,
	score/inline/rtems/score/states.inl: Add missing includes.
	* rtems/inline/rtems/rtems/attr.inl,
	rtems/inline/rtems/rtems/eventset.inl,
	rtems/inline/rtems/rtems/options.inl: Add missing includes.
	* libfs/src/dosfs/msdos_misc.c: Don't include <strings.h>.

2011-02-22	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/inline/rtems/rtems/status.inl: Add missing include.

2011-02-22	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libblock/src/media-path.c: Remove warnings.

2011-02-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sapi/include/confdefs.h,
	score/include/rtems/score/schedulerpriority.h: Add comments.

2011-02-21	Sebastian Huber <sebastian.huber@embedded-brains.de>
